# anki-mcp-manga

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.syncserver  README.md  docker-compose.yml  pyproject.toml  test_manga_agent.py
scripts/: export_panel_onnx.py  test_onnx_vs_pytorch.py
src/: agent.py  anki_manager.py  auth.py  bot.py  config.py  note_templates.py  panel_detector.py  server.py  sync_manager.py  tts.py
tests/: test_anki_manager.py  test_server.py
