[project]
name = "anki-bot"
version = "0.2.0"
description = "Telegram bot with LangGraph agent for creating Japanese vocabulary Anki flashcards"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiogram>=3.10",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "Pillow>=10.0",
    "anki",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
